# borscht-bucket

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: exceptions.py  main.py  settings.py
app/services/: documents.py  files.py  optimizer.py  optimizer_state.py  photos.py  uploads.py  videos.py
src/: config.py  constants.py  main.py  settings.py  utils.py
src/services/: documents.py  photos.py  upload.py  uploads.py  videos.py
